src/App.css
@import url('https://fonts.googleapis.com/css?family=K2D|Pacifico');

* {
    margin: 0;
    padding: 0;
    font-family: K2D, serif;
    position: relative;
    
}

#logo {
    font-family: Pacifico, cursive;
    font-size: 60px;
    background: linear-gradient(90deg, blue, red, yellow);
    color: #FFF;
    grid-column: 1 / 3;
    grid-row: 1 / 2;
}

#app {
    display: grid;
    grid-template-columns: 99vw 1vw;
    grid-template-rows: 15vh 70vh 15vh;
}

footer {
    text-align: center;
    position: fixed;
    bottom: 0px;
    background-color: #FFF;
    width: 100vw;
}

footer a {
    color: #000;
    margin: 0px 15px;
    font-size: 30px;
}

footer a:hover {
    color: #0FF;
}

/*CSS below is used for Users.js component (i.e. the sign-in page)*/

.signInTitle {
    font-size: 20px;
    padding: 10px 0px;
}

#loginContainer {
    display: flex;
    grid-column: 1 / 3;
    margin: 60px 0px 0px 100px;
    justify-content: space-around;
}

.login {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    justify-content: flex-start;
    box-shadow: 1px 1px 80px 1px #999;
    text-align: center;
    padding: 15px 0px;
    border-radius: 5px;
}

.loginInput {
    width: 55%;
    margin: 8px 0px;
    height: 40px;
    border-left: none;
    border-top: none;
    border-right: none;
    transition: width .5s;
    padding-left: 10px;
}

.loginInput:focus {
    width: 70%;
    outline: none;
}

.loginButton, .loginButton:focus {
    width: 300px;
    height: 40px;
    border-radius: 15px;
    border: none;
    transition: width .5s;
    align-self: center;
    margin: 15px 0px;
    background-color: #0FF;
}

.loginButton:hover {
    outline: none;
    box-shadow: 2px 2px 15px 0px #333;
    width: 305px;
}

#googleButton {
    background-image: linear-gradient(90deg, blue, red, yellow);
    color: #FFF;
}

@media only screen and (max-width: 1200px) {
    #loginContainer {
        flex-wrap: wrap; 
    }

    .login {
        max-width: 400px;
        margin: 0px 0px 40px 0px;
    }
}

/*CSS below is used for Rooms.js, RoomList.js, RoomCreate.js components*/

#rooms {
    display: flex;
    flex-direction: column;
    width: 25vw;
    grid-column: 1 / 3;
}

.roomList {
    height: 50px;
    margin: 0;
    width: 90%;
    padding: 0px 10px;
    border: none;
    background-color: #999;
    text-align: left;
}

.roomList:hover, .roomList:focus {
    background-color: #888;
}


.deleteButton {
    width: 10%;
    border: none;
    height: 50px;
    background-color: #999;
}

.deleteButton:hover {
    background-color: red;
}

.smallerButton {
    max-width: 100px;
}

#userArea {
    width: 25vw;
    display: flex;
    align-items: flex-end;
    border-bottom: 2px solid #333;
    margin-bottom: 20px;
}

#userArea p {
    padding: 0px 20px 0px 10px;
    font-size: 25px;
}

/*CSS below is used for Messages.js components*/

#messages {
    display: flex;
    flex-direction: column;
    width: 75vw;
    background-color: #333;
    position: absolute;
}

